--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@
         <a href="inicio.html">Inicio</a>
         <a href="about.html">Acerca de</a>
         <a href="contact.html">Contactame</a>
+        <a href="contact.html">Ubicacion</a>
+
     </nav>
 
 
