--- a/inicio.html
+++ b/inicio.html
@@ -13,6 +13,7 @@
         <a href="inicio.html">Inicio</a>
         <a href="about.html">Acerca de</a>
         <a href="contact.html">Contactame</a>
+        <a href="contact.html">Ubicacion</a>
     </nav>
 
     <section>
